--- a/assets/styles/gallery_style.css
+++ b/assets/styles/gallery_style.css
@@ -20,7 +20,7 @@ a{
     margin: auto;
     margin-top: 0px;
     width: 800px;
-    height: 167%;
+    height: 1460px;
     max-width: 800px;
     position: relative;
     padding: 30px ;
