--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,7 +4,7 @@ html, body{
     font-family: 'Roboto', sans-serif;
     margin: 0px;
     padding: 0px;
-    height: 100%;
+    height: 850px;
     width: 100%;
     background-color: black;
 }
